--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://HareeshManu.github.io/hopeful-treasures",
-  "name": "hopeful-treasures",
+  "homepage": "https://HareeshManu.github.io",
+  "name": "hopeful",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,16 +12,16 @@
     "bootstrap": "4.6.0",
     "formik": "2.1.4",
     "less": "^4.2.0",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.7.2",
+    "scheduler": "^0.23.2",
     "styled-components": "^5.3.5",
-    "web-vitals": "^1.0.1",
     "yup": "0.29.0"
   },
   "scripts": {
